--- a/templates/auth/login.twig
+++ b/templates/auth/login.twig
@@ -13,6 +13,9 @@
             <input type="password" id="password" name="password" required
                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-400 leading-tight focus:outline-none focus:shadow-outline">
         </div>
+        {%  if isErrors is defined %}
+        <div class="text-red-500 mb-4">{{ isErrors }}</div>
+        {% endif %}
         <button type="submit"
                 class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
             Login
