--- a/templates/expenses/index.twig
+++ b/templates/expenses/index.twig
@@ -59,15 +59,15 @@
             {% for expense in expenses %}
                 <tr class="border-b border-gray-700">
                     <td class="py-2 px-4">{{ expense.description }}</td>
-                    <td class="py-2 px-4">{{ expense.amountCents / 100 | number_format(2) }} €</td>
+                    <td class="py-2 px-4">{{ (expense.amountCents / 100)|number_format(2,".","") }} €</td>
                     <td class="py-2 px-4">{{ expense.date|date('d/m/Y') }}</td>
                     <td class="py-2 px-4">{{ expense.category }}</td>
                     <td class="py-2 px-4">
                         {# TODO: Configure the necessary href attribute #}
-                        <a href="#"
+                        <a href="/expenses/{{ expense.id }}/edit"
                            class="text-blue-500 hover:text-blue-400 mr-2">Edit</a>
                         {# TODO: Configure the necessary form action #}
-                        <form action="#" method="POST" class="inline">
+                        <form action="/expenses/{{ expense.id }}/delete" method="POST" class="inline">
                             <button type="submit"
                                     class="text-red-500 hover:text-red-400">Delete
                             </button>
