Expense pagination + curatare cod

--- a/templates/expenses/index.twig
+++ b/templates/expenses/index.twig
@@ -7,7 +7,6 @@
     {% set months = [
         "Ianuarie", "Februarie", "Martie", "Aprilie", "Mai", "Iunie", "Iulie", "August", "Septembrie", "Octombrie", "Noiembrie", "Decembrie"
     ] %}
-    {# TODO: Configure the necessary href attribute #}
     <a href="/expenses/create"
        class="inline-block mb-6 bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Add Expense
@@ -19,7 +18,6 @@
         <form action="/expenses" method="GET" class="mb-6 flex gap-4">
             <div>
                 <label for="year" class="block text-gray-300 text-sm font-bold mb-2">Year</label>
-                {# TODO: remove mock data below, pass actual years with expenses from the controller #}
                 <select name="year" id="year"
                         class="shadow border rounded py-2 px-3 text-gray-400 leading-tight focus:outline-none focus:shadow-outline">
                     {% for i in years %}
@@ -44,7 +42,6 @@
             </div>
         </form>
 
-        {# Listing #}
         <table class="w-full">
             <thead>
             <tr class="bg-gray-800 text-left">
@@ -63,10 +60,8 @@
                     <td class="py-2 px-4">{{ expense.date|date('d/m/Y') }}</td>
                     <td class="py-2 px-4">{{ expense.category }}</td>
                     <td class="py-2 px-4">
-                        {# TODO: Configure the necessary href attribute #}
                         <a href="/expenses/{{ expense.id }}/edit"
                            class="text-blue-500 hover:text-blue-400 mr-2">Edit</a>
-                        {# TODO: Configure the necessary form action #}
                         <form action="/expenses/{{ expense.id }}/delete" method="POST" class="inline">
                             <button type="submit"
                                     class="text-red-500 hover:text-red-400">Delete
@@ -77,19 +72,17 @@
             {% endfor %}
             </tbody>
         </table>
-
-        {# Listing pagination #}
-        <div class="mt-1 flex justify-center">{{ expenses|length }} item(s)</div>
+        {% set totalPages= (total/pageSize)|round(0, 'ceil') %}
+        <div class="mt-1 flex justify-center">{{ total }} item(s)</div>
         <div class="mt-1 flex justify-between">
-            {% if total and page > 1 %}
-                {# TODO: fill in HREF #}
-                <a href="#" class="text-blue-500 hover:text-blue-400">Previous</a>
+            {% if page > 1 %}
+                <a href="?year={{ year }}&month={{ month }}&page={{ page-1 }}" class="text-blue-500 hover:text-blue-400">Previous</a>
             {% else %}
                 <span></span>
             {% endif %}
-
-            {# TODO: hide link when there is no next page available, fill in HREF #}
-            <a href="#" class="text-blue-500 hover:text-blue-400">Next</a>
+            {% if page < totalPages %}
+            <a href="?year={{ year }}&month={{ month }}&page={{ page+1 }}" class="text-blue-500 hover:text-blue-400">Next</a>
+            {% endif %}
         </div>
     </section>
 
